Name:                toylisp
Version:             0.1
Synopsis:            Simple interpreter for a toy programming language
-- Description:
Homepage:            http://github.com/osa1/toylisp
License:             BSD3
License-file:        LICENSE
Author:              Ömer Sinan Ağacan
Maintainer:          omeragacan@gmail.com
Category:            Language
Build-type:          Simple
-- Extra-source-files:
Cabal-version:       >=1.10

Executable toylisp
  Main-is: Main.hs

  hs-source-dirs: src/

  Build-depends:
      base == 4.5.*,
      parsec == 3.1.*,
      haskeline == 0.6.*,
      transformers == 0.3.*,
      mtl == 2.1

  ghc-options: -Wall
  default-language: Haskell2010

  Other-modules:
    Prim, IO, Eval, Types, REPL, Eq, REPL

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

source-repository head
    type:     git
    location: git://github.com/osa1/toylisp.git